--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
 
       <button id="loginBtn">Connexion</button>
       <button id="registerBtn">Inscription</button>
+      <!-- RECOVERY PASSWORD -->
+<div id="recoveryBox" style="display:none; margin-top:20px;">
+  <input
+    type="password"
+    id="newPassword"
+    placeholder="Nouveau mot de passe"
+  />
+  <button id="resetPasswordBtn">Changer le mot de passe</button>
+</div>
+
+<p id="recoveryMessage" style="margin-top:10px;"></p>
+
+<p style="margin-top:12px;">
+  <a href="#" id="forgotPasswordLink" style="color:#7c3aed;">
+    Mot de passe oublié ?
+  </a>
+</p>
     </div>
 
 
