--- a/index.html
+++ b/index.html
@@ -30,48 +30,50 @@
 
 <body class="center">
 
-  <div class="auth-layout">
 
-    <!-- CONNEXION -->
-    <!-- CONNEXION / INSCRIPTION -->
-    <div class="auth-card">
-      <div id="userCount" class="user-count">Chargement des membres…</div>
+<div class="auth-layout">
 
-      <input id="email" placeholder="Email">
-      <input id="password" type="password" placeholder="Mot de passe">
-      <input id="username" placeholder="Pseudo (inscription)">
+  <div class="auth-card">
+    <div id="userCount" class="user-count">Chargement des membres…</div>
 
-      <!-- Checkbox acceptation -->
-      <div class="checkbox-group">
-        <input type="checkbox" id="terms">
-        <label for="terms" class="accept-section">
-          J’ai lu et j’accepte les <a href="conditions-utilisations.html" target="_blank">Conditions d’Utilisation</a>
-          et les
-          <a href="mentions-legales.html" target="_blank">Mentions Légales</a>
-        </label>
-      </div>
+    <input id="email" placeholder="Email">
+    <input id="password" type="password" placeholder="Mot de passe">
+    <input id="username" placeholder="Pseudo (inscription)">
 
+    <div class="checkbox-group">
+      <input type="checkbox" id="terms">
+      <label for="terms">
+        J’accepte les <a href="conditions-utilisations.html" target="_blank">CGU</a>
+      </label>
+    </div>
 
-      <button id="loginBtn">Connexion</button>
-      <button id="registerBtn">Inscription</button>
-      <!-- RECOVERY PASSWORD -->
-<div id="recoveryBox" style="display:none; margin-top:20px;">
-  <input
-    type="password"
-    id="newPassword"
-    placeholder="Nouveau mot de passe"
-  />
-  <button id="resetPasswordBtn">Changer le mot de passe</button>
+    <button id="loginBtn">Connexion</button>
+    <button id="registerBtn">Inscription</button>
+
+    <!-- 🔐 RECOVERY UI -->
+    <div id="recoveryBox" style="display:none; margin-top:20px;">
+      <input
+        type="password"
+        id="newPassword"
+        placeholder="Nouveau mot de passe"
+      />
+      <button id="resetPasswordBtn">
+        Changer le mot de passe
+      </button>
+    </div>
+
+    <p id="recoveryMessage" style="margin-top:10px;"></p>
+
+    <p style="margin-top:12px;">
+      <a href="#" id="forgotPasswordLink" style="color:#7c3aed;">
+        Mot de passe oublié ?
+      </a>
+    </p>
+  </div>
+
 </div>
 
-<p id="recoveryMessage" style="margin-top:10px;"></p>
 
-<p style="margin-top:12px;">
-  <a href="#" id="forgotPasswordLink" style="color:#7c3aed;">
-    Mot de passe oublié ?
-  </a>
-</p>
-    </div>
 
 
 
