--- a/dashboard.html
+++ b/dashboard.html
@@ -4,13 +4,13 @@
 <head>
     <link rel="shortcut icon" href="css/favicon.ico">
     <link rel="shortcut icon" href="css/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="css/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="css/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="css/apple-touch-icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="css/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="css/apple-touch-icon-120x120.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="css/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="css/android-chrome-512x512.png">
     <meta charset="UTF-8">
     <title>Cours – Plateforme</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -80,3 +80,4 @@
 </body>
 
 </html>
+
