--- a/admin.html
+++ b/admin.html
@@ -9,13 +9,13 @@
 
   <!-- Standard Favicon -->
   <link rel="shortcut icon" href="css/favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="css/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="css/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="css/apple-touch-icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="css/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="css/apple-touch-icon-120x120.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="css/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="css/android-chrome-512x512.png">
   <link rel="stylesheet" href="css/admin.css">
 
 </head>
@@ -99,5 +99,6 @@
 
   <script type="module" src="js/admin.js"></script>
 </body>
+
 
 </html>
