--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Node - Connexion</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="HtTgTwb_kOUfmIiZxDFmpkP2jfba7LFrlAMiLVNXCbA" />
   <link rel="shortcut icon" href="css/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="css/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="css/favicon-16x16.png">
