--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         
         <!-- Introduction -->
         <div class="info-hero">
-          <img src="css/node_logo.png">
+          <img src="css/node_logo.png" class="logo">
           <h2 class="info-title">Node, c'est quoi ?</h2>
           <p class="info-lead">
             Node est une plateforme d'entraide pensée par et pour les lycéens. Ici, tu peux poser tes questions librement, 
